# STEMulation

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/attributes/: CMakeLists.txt
source/attributes/abstract/: CMakeLists.txt  enumerable.h  factory_constructible.cpp  factory_constructible.h  iterable.h  reflective.h  reverse_iterable.h  singleton.h
source/attributes/concrete/: CMakeLists.txt  asynchronous.h  composite.h  date_configurable.h  dependency_injectable.h  future_mappable.h  input_streamable.h  loggable.h  logging_file_streamable.h  logging_streamable.h  mutex_mappable.h  output_streamable.h  prototype_constructible.h  static_asynchronous.h  static_authenticatable.h  static_cli_argument_processable.h  static_cli_configurable.h  static_dependency_injectable.h  static_file_configurable.h  static_future_mappable.h  static_initializable.h  static_loggable.h  static_logging_streamable.h  static_mutex_mappable.h  static_setupable.h  static_synchronizable.h  static_toggleable_streamable.h  static_token_map_configurable.h  static_variable_map_registrable.h  streamable.h  synchronizable.h  toggleable_streamable.h  tuple_attribute.h  variable_map_registrable.h  xml_constructible.h
source/attributes/interfaces/: CMakeLists.txt  any_configurable.h  authenticatable.h  cli_argument_processable.h  cli_configurable.h  cli_usage_menu_printable.h  cloneable.h  configurable.h  date_formattable.h  executable.h  file_configurable.h  finalizable.h  indexable.h  initializable.h  nameable.h  publisher_subscribable.h  registry_configurable.h  serializable.h  setupable.h  swappable.h  token_map_configurable.h  updateable.h  xml_readable.h  xml_writable.h
source/attributes/operators/: CMakeLists.txt  operator.h
source/containers/: CMakeLists.txt  entry_container.h  identifier_and_time_sorted_container.h  identifier_sorted_container.h  time_sorted_container.h
source/containers/tree/: CMakeLists.txt  branch_counter.h  branch_printer.h  node_counter.h  node_printer.h  prefix_tree.h  tree_node.h
source/functional/: CMakeLists.txt  any.h  holder.h  invoke.h  lambda_helper.h  tuple_for_each.h  variable_wrapper.h
source/functional/functors/: CMakeLists.txt  functor.h
source/iterators/: CMakeLists.txt  bidirectional_iterator.h  forward_iterator.h  inherited_iterator.h  input_iterator.h  iterator.h  output_iterator.h  random_access_iterator.h
source/math/: CMakeLists.txt  math_constants.h
source/math/combinatorics/: CMakeLists.txt  factorial.h  permutator.h
source/math/control_systems/: CMakeLists.txt  stateMap.cpp  stateMap.h  stateSpaceModel.cpp  stateSpaceModel.h  stateVector.cpp  stateVector.h
source/math/curves/: CMakeLists.txt  bezier.h  linear.h
source/math/differentiators/: CMakeLists.txt  iterative_differentiator.h
source/math/expression/: CMakeLists.txt
source/math/geometric/: CMakeLists.txt  angularSubtense.cpp  angularSubtense.h  line.cpp  line.h  plane.cpp  plane.h  ray.cpp  ray.h  rayIntersection.cpp  rayIntersection.h
source/math/integrators/: CMakeLists.txt  adaptiveRungeKutta.cpp  adaptiveRungeKutta.h  butcherTableau.cpp  butcherTableau.h  rungeKutta.cpp  rungeKutta.h  rungeKutta4.cpp  rungeKutta4.h  rungeKuttaFehlberg45.cpp  rungeKuttaFehlberg45.h
source/math/interpolators/: CMakeLists.txt  interpolator.h  linear_interpolator.h  prefix_tree_interpolator.h
source/math/linear_algebra/: CMakeLists.txt
source/math/measurement/: CMakeLists.txt  decimal_place_value_type.h  place_value_type.h  whole_place_value_type.h
source/math/number_systems/: CMakeLists.txt
source/math/sets/: CMakeLists.txt  cartesian_product.h  set.h  subscript.h
source/math/signal_processing/: CMakeLists.txt  sequence_convolver.h
source/math/statistical/: CMakeLists.txt  average.h  correlation.h  covariance.h  standard_deviation.h  statistical_calculator.h  statistical_variance.h  sum.h
source/math/trigonometric/: CMakeLists.txt  angle_unit_type.h  trigonometry.h
source/memory/: CMakeLists.txt  aligned.h  garbage_collector.h  virtual_enable_shared_from_this.h
source/messaging/: CMakeLists.txt  messageConfiguration.cpp  messageConfiguration.h  message_dispatcher.h  message_packet.h  message_recipient.h  messenger.h  priorityPublisher.cpp  priorityPublisher.h  priority_subscriber.h  publisher.cpp  publisher.h  signal_slot.h  static_message_dispatcher.h  subscriber.cpp  subscriber.h
source/networking/: CMakeLists.txt  URL.cpp  URL.h  URL_Field.h  URL_Parser.cpp  URL_Parser.h  downloader.cpp  downloader.h  downloaderPreferences.cpp  downloaderPreferences.h  httpHeaders.cpp  httpHeaders.h  httpRequestMethod.h  transportLayerProtocol.h
source/networking/authentication/: CMakeLists.txt  cookie.cpp  cookie.h  credentialed.h  instanceCredentialed.cpp  instanceCredentialed.h  staticallyCredentialed.cpp  staticallyCredentialed.h
source/networking/sockets/: socket.h  (+10 more)
source/physics/: CMakeLists.txt  physics_constants.h
source/traits/: CMakeLists.txt
source/utilities/: CMakeLists.txt  algorithm.h  cli_argument_processor.h  csv_tokenizer.h  custom_locale.h  dictionary.h  logging_level.h  thread_pool.h  toggleable_stream.h  token_iterator.h  tokenizer.h  variable_registry.h  variable_registry_entry.h
unit_tests/: CMakeLists.txt  test.cpp  testBalancedExpressionChecker.cpp  testBalancedExpressionChecker.h  testBezier.cpp  testBezier.h  testCholesky.cpp  testCholesky.h  testComplexMatrix2d.cpp  testComplexMatrix2d.h  testComplexMatrixNd.cpp  testComplexMatrixNd.h  testCroutLU.cpp  testCroutLU.h  testDate.cpp  testDate.h  testDependencyInjectable.cpp  testDependencyInjectable.h  testDirectoryTraverser.cpp  testDirectoryTraverser.h  testDoolittleLU.cpp  testDoolittleLU.h  testExpressionTree.cpp  testExpressionTree.h  testGeneralMatrix2d.cpp  testGeneralMatrix2d.h  testGeneralMatrixNd.cpp  testGeneralMatrixNd.h  testNumericMatrix2d.cpp  testNumericMatrix2d.h  testNumericMatrixNd.cpp  testNumericMatrixNd.h  testPolynomial.cpp  testPolynomial.h  testPrefixTree.cpp  testPrefixTree.h  testPublisherSubscriber.cpp  testPublisherSubscriber.h  testQR.cpp  testQR.h  (+22 more)
(+385 files in other folders)
